--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,9 @@
 body {
-  background-color: #ffd7ba;
+  background-image: url(../img/background.jpg);
+  background-size: cover;
+  color: lightgray;
+  text-align: justify;
+
 }
 
 #top-row {
@@ -8,18 +12,25 @@ body {
   border: lightgray;
   border-width: thick;
   padding: 10px;
+  min-height: 100px;
+  margin-bottom: 10px
 }
 
 h1 {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2%;
+  margin-bottom: 2%;
   color: lightgray;
   text-align: center;
   font-family: monospace;
-  font-weight: 400;
-  font-size: 70px
+  font-weight: 600;
+  font-size: 50px
 }
 
 .card {
-  display: none;
+  display: block;
   text-align: justify;
   margin: 10px;
 }
