--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   color: lightgray;
   text-align: justify;
+  padding: 10px;
 
 }
 
@@ -25,8 +26,13 @@ h1 {
   color: lightgray;
   text-align: center;
   font-family: monospace;
-  font-weight: 600;
-  font-size: 50px
+  font-weight: 900;
+  font-size: 60px
+}
+
+h4 {
+  font-size: 20px;
+  color: #9ed5ff;
 }
 
 .card {
@@ -35,7 +41,7 @@ h1 {
   margin: 10px;
   background-color: darkgray;
   color: black;
-  border: lightgray
+  border: lightgray;
 }
 
 .card img {
@@ -50,4 +56,23 @@ h1 {
   width: 75%;
   margin-left: auto;
   margin-right: auto;
+}
+
+.submit {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  float: left;
+  height: 40px;
+  width: 200px;
+  text-align: center;
+  background-color: lightgray
+  color: darkgray;
+}
+
+.form-control {
+  width: 400px;
+}
+
+.survey-q {
+  margin-top: 20px;
 }
