--- a/css/styles.css
+++ b/css/styles.css
@@ -37,7 +37,7 @@ h4 {
 }
 
 .card {
-  display: block;
+  display: none;
   text-align: justify;
   margin: 10px;
   background-color: darkgray;
@@ -71,14 +71,24 @@ h4 {
 }
 
 .form-control {
-  width: 400px;
+  width: 200px;
 }
 
 .survey-q {
   margin-top: 20px;
 }
 
+option {
+  font-size: 12px;
+  color: black;
+  font-weight: 600;
+}
+
 option:first-child {
-  color: darkred;
+  color: lightgray;
   font-weight: 500;
+}
+
+.show {
+  display: block;
 }
