--- a/css/styles.css
+++ b/css/styles.css
@@ -1,39 +1,48 @@
 body {
-  background-image: url(../img/background.jpg);
+  background-image: url(../img/background.png);
   background-position: left top;
+  background-size: 2000px 1125px;
   color: lightgray;
   text-align: justify;
-  padding: 10px;
+  padding: 20px;
   padding-left: calc(100vw - 100%);
 }
 
 #top-row {
-  background-image: url(../img/header.jpg);
-  background-position: -700px, 0px;
-  border: lightgray;
-  border-width: thick;
-  padding: 10px;
-  min-height: 100px;
-  margin-bottom: 20px;
+  background: rgb(15,27,70);
+  background: linear-gradient(90deg, rgba(15,27,70,0) 0%, rgba(167,167,167,0.3) 19%, rgba(241,240,240,0.39959161931818177) 48%, rgba(167,167,167,0.3) 77%, rgba(17,29,73,0) 100%);
+  border: solid thin #0c111f;
+  padding: -20px;
+  height: 150px;
+  width: 110%;
+
 }
 
 h1 {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 2%;
-  margin-bottom: 2%;
-  color: lightgray;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  color: #0c111f;
   text-align: center;
   font-family: monospace;
-  font-size: 60px
+  font-size: 40px;
+  text-align: center;
+}
+
+h2 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    margin: 1%;
 }
 
 h4 {
   font-size: 20px;
-  color: #9ed5ff;
+  color: rgb(204, 204, 204, 0.9);
   display: block;
   text-align: left;
+  margin-top: 0%;
+  margin-bottom: 2%;
 }
 
 .card {
@@ -63,29 +72,45 @@ h4 {
   margin-right: auto;
 }
 
-.submit {
+#submit {
   display: block;
-  margin: 2%;
+  margin-top: 13%;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  height: 50px;
+  text-align: center;
+  background-color: rgb(74, 74, 74, 0.0);
+  color: lightgray;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+#reset {
+  display: block;
+  margin-top: 12%;
   margin-left: auto;
   margin-right: auto;
   width: 20%;
   height: 50px;
   text-align: center;
-  background-color: rgb(74, 74, 74, 0.2);
+  background-color: rgb(74, 74, 74, 0.0);
   color: lightgray;
   border-radius: 5px;
+  cursor: pointer;
 }
 
 .form-control {
   display: block;
+  cursor: pointer;
 }
 
 .survey-q {
   display: block;
   width: 96%;
+  min-width: 200px;
+  height: 100px;
   margin: 2%;
-  float: left;
-
 }
 
 option {
@@ -111,6 +136,13 @@ option:first-child {
   display: none;
 }
 
+#questions {
+  margin: 0%;
+  padding: 2%;
+  border: solid thin lightgray;
+  background-color: rgb(31, 33, 46, 0.5);
+}
+
 .results-col {
   display: block;
   margin-left: auto;
@@ -124,9 +156,20 @@ option:first-child {
 }
 
 #intro {
-  background-color: rgb(74, 74, 74, 0.3);
-  margin: -2%;
+  background-color: rgb(31, 33, 46, 0.5);
+  margin: 0%;
   padding: 2%;
-  border: solid thin darkgray;
+  border: solid thin lightgray;
   border-radius: 2px;
+}
+
+#mission {
+  padding: 1%;
+  font-weight: 600;
+}
+
+.btn-primary {
+  background-color: rgb(55, 84, 120, .5);
+  border-color: lightgray;
+  cursor: pointer;
 }
