--- a/css/styles.css
+++ b/css/styles.css
@@ -50,13 +50,14 @@ h4 {
 .card {
   display: none;
   text-align: center;
-  margin: 1%;
+  margin-left: 2%;
   background-color: rgb(31, 33, 46, 0.6);
   color: lightgray;
   border: solid thin lightgray;
   float: left;
   width: 31%;
-  min-width: 100px
+  min-width: 100px;
+
 }
 
 .card img {
@@ -68,14 +69,14 @@ h4 {
 
 .card a {
   display: block;
-  width: 50%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto;
 }
 
 #submit {
   display: block;
-  margin-top: 13%;
+  margin-top: 8%;
   margin-left: auto;
   margin-right: auto;
   width: 40%;
@@ -89,7 +90,7 @@ h4 {
 
 #reset {
   display: block;
-  margin-top: 12%;
+  margin-top: 2%;
   margin-left: auto;
   margin-right: auto;
   width: 20%;
@@ -100,6 +101,7 @@ h4 {
   border-radius: 5px;
   cursor: pointer;
 }
+
 
 .form-control {
   display: block;
@@ -162,12 +164,6 @@ option:first-child {
   margin-right: auto;
 }
 
-#reset {
-  display: block;
-  margin-left: 40%;
-  margin-right: auto;
-}
-
 #intro {
   background-color: rgb(31, 33, 46, 0.6);
   margin: 0%;
@@ -191,4 +187,15 @@ option:first-child {
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+#card-display {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1200px;
+}
+
+#reset-row {
+  min-width: 500px;
 }
